<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

	<PreferenceCategory
		app:title="@string/general_settings">

		<ListPreference
			app:key="device_type"
			app:title="@string/device_type"
			app:entries="@array/device_type_options"
			app:icon="@drawable/ic_midi"/>

	</PreferenceCategory>

	<PreferenceCategory
		app:title="@string/page_turn_triggers">

		<Preference
			app:key="page_forward"
			app:title="@string/page_forward"
			app:icon="@drawable/ic_forward"/>

		<Preference
			app:key="page_back"
			app:title="@string/page_back"
			app:icon="@drawable/ic_back"/>

	</PreferenceCategory>

	<PreferenceCategory
		app:key="about"
		app:title="@string/about_app_name">

		<Preference
			app:key=""
			app:title="@string/website"
			app:icon="@drawable/ic_website"/>

		<!--suppress AndroidDomInspection -->
		<Preference
			app:key="version"
			app:title="@string/version"
			app:summary="@string/versionName"
			app:icon="@drawable/ic_number"/>

		<Preference
			app:key="license"
			app:title="@string/license"
			app:summary="GNU Affero General Public License v3.0 or later"
			app:icon="@drawable/ic_license"/>

		<Preference
			app:key="source"
			app:title="@string/code"
			app:icon="@drawable/ic_code"/>

		<Preference
			app:key="issues"
			app:title="@string/issues"
			app:icon="@drawable/ic_bug"/>

		<Preference
			app:key="donate"
			app:title="@string/donate"
			app:icon="@drawable/ic_donate"/>

	</PreferenceCategory>

</PreferenceScreen>