<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:padding="16dp">

		<com.google.android.material.textfield.TextInputLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu">

			<com.google.android.material.textfield.MaterialAutoCompleteTextView
				android:id="@+id/action"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/action"
				android:inputType="none"
				tools:ignore="SpeakableTextPresentCheck"/>

		</com.google.android.material.textfield.TextInputLayout>

		<LinearLayout
			android:id="@+id/custom_settings"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="32dp"
			android:orientation="vertical">

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/custom"/>

			<com.google.android.material.textfield.TextInputLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

				<com.google.android.material.textfield.MaterialAutoCompleteTextView
					android:id="@+id/status"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:hint="@string/status"
					android:inputType="none"
					tools:ignore="SpeakableTextPresentCheck"/>

			</com.google.android.material.textfield.TextInputLayout>

			<com.google.android.material.textfield.TextInputLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

				<com.google.android.material.textfield.MaterialAutoCompleteTextView
					android:id="@+id/channel"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:hint="@string/channel"
					android:inputType="none"
					tools:ignore="SpeakableTextPresentCheck"/>

			</com.google.android.material.textfield.TextInputLayout>


			<com.google.android.material.textfield.TextInputLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"

				style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

				<com.google.android.material.textfield.MaterialAutoCompleteTextView
					android:id="@+id/data1"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:hint="@string/data_byte_1"
					android:inputType="none"
					tools:ignore="SpeakableTextPresentCheck"/>

			</com.google.android.material.textfield.TextInputLayout>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				android:baselineAligned="false">

				<com.google.android.material.textfield.TextInputLayout
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight=".4"
					style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

					<com.google.android.material.textfield.MaterialAutoCompleteTextView
						android:id="@+id/operator"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:hint="= | \u2264 | \u2265"
						android:inputType="none"
						tools:ignore="HardcodedText,SpeakableTextPresentCheck"/>

				</com.google.android.material.textfield.TextInputLayout>

				<com.google.android.material.textfield.TextInputLayout
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight=".6"
					android:layout_marginStart="8dp"
					style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

					<com.google.android.material.textfield.MaterialAutoCompleteTextView
						android:id="@+id/data2"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:hint="@string/data_byte_2"
						android:inputType="none"
						tools:ignore="SpeakableTextPresentCheck"/>

				</com.google.android.material.textfield.TextInputLayout>

			</LinearLayout>

		</LinearLayout>

		<Button
			android:id="@+id/save"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="8dp"
			android:text="@string/save"/>

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="16dp"
			android:text="@string/event_log"/>

		<TextView
			android:id="@+id/log"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="8dp"
			android:alpha=".5"/>

	</LinearLayout>

</ScrollView>